# qr_code_generator

./: .gitignore  README.md  generate.py  main.py  pyproject.toml
src/qr_code_generator/: __init__.py  generator.py
